# Zed_Update

./: .gitignore  CHANGELOG.md  GITHUB_WORKFLOWS_UPDATE.md  GUI_MIGRATION_README.md  INTEGRATION_README.md  LICENSE  MANUAL_GUI_FIX.txt  PROJECT_REORGANIZATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REFACTORING.md  REFACTORING_REPORT.md  VERSION_CHECK_INFO.md  ZedUpdate.bat  ZedUpdateSilent.bat  ZedUpdater.bat  ZedUpdater.spec  ZedUpdater.spec.template  config.example.json  config.json  fix_gui_font.py  gui_font_patch.txt  gui_launcher.pyw  install.py  main.py  main.pyw  pyproject.toml  requirements.txt  run.bat  setup.py  start.bat  start.sh  start_gui.bat  start_gui_silent.vbs  suggestions.md  test_font_fix.py  test_gui_font_fix.py  test_network_retry_core.py  test_utf8.py  (+1 more)
.github/workflows/: build-multi-arch.yml  build-windows.yml  build.yml  ci.yml  test-paths.yml
docs/: API.md  DEVELOPER.md  USER_GUIDE.md
examples/: fixes_example.py
legacy/: gui_launcher.pyw  main.py  requirements.txt  setup.py  uninstall.py
legacy/updater/: __init__.py  config.py  updater.py
modern/backend/: go.mod  main.go
modern/frontend/: main.py  requirements.txt
scripts/: Makefile  install.py  run.py  start-legacy.bat  start-legacy.sh  start-modern.bat  start-modern.sh
src/zed_updater/: __init__.py  cli.py  gui_main.py
src/zed_updater/core/: __init__.py  config.py  exceptions.py  scheduler.py  updater.py
src/zed_updater/gui/: __init__.py  main_window.py  settings_dialog.py  system_tray.py  updater_gui.py
src/zed_updater/services/: __init__.py  github_api.py  notification_service.py  system_service.py
src/zed_updater/utils/: __init__.py  encoding.py  error_handler.py  logger.py
tests/: integration_test.py  test_config_thread_safety.py  test_config_thread_safety_fixed.py  test_exception_handling.py  test_fixes.py  test_retry_mechanism.py  test_security_fixes.py  test_version_fix.py
updater/: __init__.py  config.py  encoding_utils.py  gui.py  scheduler.py  updater.py  updater_new.py
zed_updater/: README.md  __init__.py  __main__.py  constants.py
zed_updater/core/: __init__.py  config.py  scheduler.py
zed_updater/ui/: __init__.py  dialogs.py  tray.py
zed_updater/utils/: __init__.py  encoding.py  network.py  platform.py  version.py
