[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zed-updater"
version = "2.1.0"
description = "Zed Editor Auto Updater - A modern, extensible auto-updater with both legacy and modern implementations"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Zed Update Team", email = "team@zed-updater.dev"}
]
maintainers = [
    {name = "Zed Update Team", email = "team@zed-updater.dev"}
]
keywords = ["zed", "editor", "updater", "auto-update", "gui", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.10",
    "PyQt5-Qt5>=5.15.2",
    "PyQt5-sip>=12.13.0",
    "requests>=2.31.0",
    "urllib3>=1.26.0",
    "psutil>=5.9.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
    "chardet>=5.0.0",
    "colorama>=0.4.6",
    "PyYAML>=6.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
build = [
    "pyinstaller>=5.0.0",
    "setuptools>=61.0",
    "wheel>=0.37.0",
]
all = [
    "zed-updater[dev,build]",
]

[project.urls]
Homepage = "https://github.com/TC999/zed-update"
Repository = "https://github.com/TC999/zed-update"
Issues = "https://github.com/TC999/zed-update/issues"
Changelog = "https://github.com/TC999/zed-update/blob/main/CHANGELOG.md"

[project.scripts]
zed-updater = "zed_updater.cli:main"
zed-updater-gui = "zed_updater.gui_main:main"

[project.gui-scripts]
zed-updater-gui = "zed_updater.gui_main:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["zed_updater*"]

[tool.setuptools.package-data]
"zed_updater" = ["*.yaml", "*.yml", "*.json", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["zed_updater"]
known_third_party = ["PyQt5", "psutil", "requests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PyQt5.*",
    "psutil.*",
    "win32api.*",
    "win32con.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=zed_updater --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["zed_updater"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]