[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zed-updater"
version = "2.0.0"
description = "Zed Editor Auto Updater - Simplified and unified architecture"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Zed Update Team", email = "team@zed-updater.dev"}
]
keywords = ["zed", "editor", "updater", "auto-update", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.10",
    "PyQt5-Qt5>=5.15.2",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pywin32>=304; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
build = [
    "pyinstaller>=5.0.0",
    "setuptools>=61.0",
    "wheel>=0.37.0",
]

[project.urls]
Homepage = "https://github.com/TC999/zed-update"
Repository = "https://github.com/TC999/zed-update"
Issues = "https://github.com/TC999/zed-update/issues"

[project.scripts]
zed-updater = "zed_updater.cli:main"
zed-updater-gui = "zed_updater.gui_main:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["zed_updater*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
exclude = '''/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|build|dist)/'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=zed_updater"
testpaths = ["tests"]
python_files = "test_*.py"